[metadata]
name = pugs
version = 0.0.1
description = 
long_description = file: README.rst
keywords = pugs, packaging
maintainer = Bernat Gabor
author = Bernat Gabor
maintainer-email = gaborjbernat@gmail.com
url = https://github.com/gaborbernat/pugs
project_urls =
    Source=https://github.com/gaborbernat/pugs
    Tracker=https://github.com/gaborbernat/pugs/issues
classifiers = Development Status :: 5 - Production/Stable
              Intended Audience :: Developers
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 2
              Programming Language :: Python :: 2.7
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.4
              Programming Language :: Python :: 3.5
              Programming Language :: Python :: 3.6
              Programming Language :: Python :: 3.7
platforms = any
license_file = LICENSE.txt

[options]
zip_safe = True
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =

[options.extras_require]
test = pytest >= 3.5.0, < 5

[options.packages.find]
where = src

[sdist]
formats = gztar

[bdist_wheel]
universal = true
